# Capstone-Project

./: .gitignore  README.md
project-root/: docker-compose.yml
project-root/streamlit/: Dockerfile  app.py  requirements.txt
project-root/streamlit/db/: mongo.py
server/: pyproject.toml
server/app/clean/: clean.py  clean_connections.py
server/app/db/: mongo.py
server/app/gold/: build_gold.py
server/app/ingest/: ingest_raw.py
server/app/project/: project_tensor_to_neo4j.py
server/app/test/: test_aggregate.py  test_clean.py  test_models.py
server/app/utils/: logger.py
